--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "proxy-server",
+  "name": "render-proxy",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
+  "dependencies": {
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2"
+  },
   "scripts": {
     "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
-    "axios": "^1.6.2"
   }
 }
-
